update index add gitignore

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       content="WDD130 Home Page for Vern Wolfley's Web Projects."
     />
     <meta name="author" content="Vern Wolfley" />
+    <meta name="theme-color" content="#006EB6">
   </head>
   <body>
     <h1>Welcome to WDD130 Web Projects</h1>
@@ -21,5 +22,6 @@
       <a href="#">Personal Website</a>
       <a href="#">Personal Siteplan</a>
     </nav>
+    <p>Vern Wolfley - WDD130</p>   
   </body>
 </html>
