--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
       content="WDD130 Home Page for Vern Wolfley's Web Projects."
     />
     <meta name="author" content="Vern Wolfley" />
-    <meta name="theme-color" content="#006EB6">
+    <meta name="theme-color" content="#006EB6" />
   </head>
   <body>
     <h1>Welcome to WDD130 Web Projects</h1>
     <nav>
-      <a href="aboutme/index.html">About Me Page</a>
-      <a href="wwr/index.html">White Water Rafting Website</a>
-      <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-      <a href="positioning.html">Positioning Activity</a>
-      <a href="#">Personal Website</a>
-      <a href="#">Personal Siteplan</a>
+      <a href="aboutme/index.html" target="_blank">About Me Page</a>
+      <a href="wwr/index.html" target="_blank">White Water Rafting Website</a>
+      <a href="wwr/site-plan-rafting.html" target="_blank"
+        >White Water Rafting Siteplan</a
+      >
+      <a href="positioning.html" target="_blank">Positioning Activity</a>
+      <a href="#" target="_blank">Personal Website</a>
+      <a href="#" target="_blank">Personal Siteplan</a>
     </nav>
-    <p>Vern Wolfley - WDD130</p>   
+    <p>Vern Wolfley - WDD130</p>
   </body>
 </html>
