--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8" />
-    <title>Site Plan</title>
+    <title>WWR Site Plan</title>
     <link
       type="text/css"
       rel="stylesheet"
@@ -14,7 +14,7 @@
     <header>
       <h1>White Water Rafting Site Plan</h1>
       <h2>Vern Wolfley</h2>
-      <h2>WDD 130-[section]</h2>
+      <h2>WDD 130-A1</h2>
       <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
     </header>
     <main>
@@ -22,12 +22,50 @@
       <hr />
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>
       <!-- change this -->
-
+      <p>
+        Our goal at White Water Rafting is to inspire, educate, and enable all
+        levels of adventure seekers to the thrill of white water rafting. We aim
+        to provide a comprehensive platform that offers valuable insights,
+        expert guidance, and a community for rafting enthusiasts. Whether you're
+        a seasoned rafter or a first-timer, we're dedicated to equipping you
+        with the knowledge, resources, and excitement needed for an
+        unforgettable white water rafting experience.
+      </p>
+      
       <h3>Audience</h3>
-      <p>[Your audience here]</p>
       <!-- change this -->
+      <p>
+        Our target audience shares an aspiration to live a bold, experience-rich
+        life, and a love of nature. This customer demographic is typically
+        between 18 and 50 living in a moderate to comfortable financial
+        situation. Their interests lie in engaging in physical activities,
+        embracing the natural world, and exploring the great outdoors.
+      </p>
+      <p>
+        They want more than just a vacation, they want an unforgettable
+        adventure that provides an escape from the routine and challenges them
+        in the process. These adventures seek to immerse themselves in the
+        thrill of the white water, connect with nature, and develop camaraderie
+        with fellow adventures. They desire experiences that leave a lasting
+        impact and stories to share with family and friends.
+      </p>
+      <p>
+        Despite their eagerness to embark on white water rafting adventure, they
+        struggle to find a streamlined, comprehensive, and reliable platform
+        that guides them through their perfect journey. They are looking for a
+        one-stop resource that provides detailed information about rafting
+        locations, equipment, safety measures, and trip planning. They want
+        personalized recommendations, and tailored suggestions for rafting trips
+        based on skill level, preferences, and location.
+      </p>
+      <p>
+        Our target audience predominantly accesses websites through mobile
+        devices and laptops, seeking quick and accessible information while on
+        the go. Thus, optimizing our website for mobile compatibility and
+        ensuring a seamless user experience across devices is crucial to
+        effectively cater to their needs and preferences.
+      </p>
 
       <hr />
       <h2>Branding</h2>
