--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -115,11 +115,11 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]
+        Heading Font: Palatino
         <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]
+        Paragraph Font: Trebuchet MS
         <!-- change this -->
       </h4>
       <h3>Normal paragraph example</h3>
