--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
       <h1>About Me</h1>
-      <img alt="Family Picture" src="images/family_pic.jpg" />
+      <img alt="Family Picture" src="/images/family_pic.jpg" />
       <h2>Vern Wolfley</h2>
       <p>
         Let me introduce myself to you! I am married to my wonderful wife Kindy,
