--- a/wwr/index.html
+++ b/wwr/index.html
@@ -71,7 +71,7 @@
       </section>
     </main>
     <footer>
-      <p>Dry Oar &copy; 2023 - Your First and Last Name Here</p>
+      <p>Dry Oar &copy; 2023 - Vern Wolfley</p>
       <p><a href="site-plan-rafting.html">Site Plan</a></p>
       <p><a href="contactus.html">Contact Us</a></p>
       <div class="social">
