update football site info

--- a/knights-football/site-plan.html
+++ b/knights-football/site-plan.html
@@ -90,9 +90,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Roster</a>
+        <a href="#">Schedule</a>
+        <a href="#">Regulations</a>
       </nav>
       <hr>
       <h2>
@@ -100,13 +100,13 @@
       </h2>
       <div class="sitemap">
         <div class="sm-home">
-          Home
+          Roster
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Schedule <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Regulations  <!-- change this -->
         </div>
 
         <div class="top">
@@ -126,7 +126,7 @@
       <h2>
         Content
       </h2>
-      <h3>Home page</h3>
+      <h3>Roster</h3>
       <p>
         [Written copy for the home page here]
       </p>
@@ -135,7 +135,7 @@
         <img src="#" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Schedule</h3>
       <p>
         [Written copy for the Page 2 here]
       </p>
@@ -144,7 +144,7 @@
         <img src="#" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Regulations</h3>
       <p>
         [Written copy for the Page 3 here]
       </p>
@@ -160,19 +160,19 @@
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
 
-      <h3>Home</h3>
+      <h3>Roster</h3>
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Schedule</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Regulations</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
