add more text and pictures

--- a/knights-football/site-plan.html
+++ b/knights-football/site-plan.html
@@ -54,7 +54,7 @@
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
       <img
-        src="./images/triviumcrimsonknights_knightntype.jpg"
+        src="./images/triviumcrimsonknights_knightntype_rsz.png"
         alt="kneeling knight"
         height="500"
       />
@@ -126,20 +126,21 @@
       <h3>Navigation</h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
       <nav>
+        <a href="#">Home</a>
         <a href="#">Roster</a>
         <a href="#">Schedule</a>
-        <a href="#">Regulations</a>
+        <!-- <a href="#">Regulations</a> -->
       </nav>
       <hr />
       <h2>Site Map</h2>
       <div class="sitemap">
-        <div class="sm-home">Roster</div>
+        <div class="sm-home">Home</div>
         <div class="sm-page2">
-          Schedule
+          Roster
           <!-- change this -->
         </div>
         <div class="sm-page3">
-          Regulations
+          Schedule
           <!-- change this -->
         </div>
 
@@ -151,12 +152,71 @@
       <!-- --------Content Section -------------- -->
       <hr />
       <h2>Content</h2>
+      <h3>Home</h3>
+      <h4>Welcome</h4>
+      <p>
+        Welcome to the exhilarating play of Trivium Prep Football! We invite
+        students, parents, and devoted fans to join us in celebrating the
+        passion, dedication, and unwavering spirit of our remarkable team.
+        Trivium's football program is not just about touchdowns and victories;
+        it's a vibrant community that fosters character development, teamwork,
+        and a love for the game. Whether you're a student athlete striving for
+        greatness, a supportive parent cheering from the sidelines, or an
+        enthusiastic fan seeking thrilling Friday night lights, we are excited
+        to have you as a part of our football family. Together, we'll embark on
+        a journey of grit and glory, creating memories that will last a
+        lifetime. Get ready to experience the electrifying energy of Trivium
+        Prep Football!
+      </p>
+      <h4>Great Hearts Athletic Philosophy</h4>
+      <p>
+        Our students benefit from the development of habits and virtue as part
+        of the athletic experience. We strive for excellence on and off the
+        field, providing an experience that shapes our athletes to be better
+        people. The best measure of success of a Great Hearts athletic program
+        is found in the character of the athlete it produces. All of our
+        students can find opportunities to be successful while also being
+        challenged at the highest levels of athletic competition.
+      </p>
+      <p>
+        Great Hearts athletes train and practice with vigor similar to their
+        approach in their academic pursuits. Our athletic programs foster a
+        sense of cooperation that builds community and creates the life-long
+        friendships. Our programs also foster team spirit and encourage the
+        celebration of accomplishments and personal growth. Through community
+        and building relationships, athletes are held to the highest standard of
+        integrity and sportsmanship.
+      </p>
+      <h4>Good Sportsmanship Reminder</h4>
+      <p>
+        As member school of the Arizona Interscholastic Association, we would
+        like to remind you the objectives of educational based athletics are
+        what set this event apart from all other levels of competition. We
+        strive to promote good sportsmanship by student-athletes, coaches and
+        spectators. We have a strong commitment to excellence, fair play, and
+        above all, good sportsmanship. We request your cooperation by supporting
+        the participants and officials in a positive manner.
+      </p>
+
+      <p>Images for the Home page</p>
+      <ul>
+        <img
+          src="./images/knights_field_game_rsz.jpg"
+          alt="image for homepage"
+          height="350"
+        />
+        <img
+          src="./images/roster/triv-169_rsz.jpg"
+          alt="image for homepage"
+          height="350"
+        />
+      </ul>
       <h3>Roster</h3>
       <p>
         Football Roster List of players and their stats Number, Name, Position,
-        Height, Weight
+        Height, Weight This will be a table or list of players and their stats
       </p>
-      <p>Class Coaching Staff Name, Title</p>
+      <p>Class Coaching Staff Name, Title, this will be a table or list</p>
       <p>Definitions of Player Positions</p>
 
       <ul>
@@ -187,54 +247,63 @@
         <li>PR: Punt Returner</li>
       </ul>
 
-      <p>Images for the Roster page</p>
+      <p>Images for the Page 2 - Roster</p>
       <ul>
-        <img src="#" alt="image for homepage" />
-        <img src="#" alt="image for homepage" />
+        <img
+          src="./images/roster/roster_line_rsz.jpeg"
+          alt="image for page"
+          height="350"
+        />
+        <img
+          src="./images/roster/hs_football_2023_rsz.jpeg"
+          alt="image for page"
+          height="350"
+        />
       </ul>
       <h3>Schedule</h3>
-      <p>Trivium Prep Crimson Knights
-        Varsity Boys Football
-        Goodyear, AZ
-        Conference - 2A
-        Region - Gila
+      <p></p>
+      <p>
+        Trivium Prep Crimson Knights Varsity Boys Football Goodyear, AZ
+        Conference - 2A Region - Gila
       </p>
-        <ul>Stats boxes detailing:
-          <li>Overall Record</li>
-          <li>Conference Record</li>
-          <li>Home Record</li>
-          <li>Away Record</li>
-  
-          <li>Overall Record: 3-7</li>
-          <li>Overall PCT: 0.300</li>
-          <li>Conference Record: 3-6</li>
-          <li>Conference PCT: 0.333</li>
-          <li>Region: 3-3</li>
-          <li>Region PCT: 0.500</li>
-        </ul>
-        
-        <p>Games</p>
-        <ul>List the game information:
-          <li>Date</li>
-          <li>Time</li>
-          <li>Location</li>
-          <li>Opponent</li>
-          <li>Opponents mascot</li>
-          <li>Whether it was a win, loss, or not played yet</li>
-          <li>Final score</li>
-        </ul>
-        
-      <p>Images for the Page 2 - Schedule</p>
       <ul>
-        <img src="#" alt="image for page" />
-        <img src="#" alt="image for page" />
+        Stats boxes detailing:
+        <li>Overall Record</li>
+        <li>Conference Record</li>
+        <li>Home Record</li>
+        <li>Away Record</li>
+
+        <li>Overall Record: 3-7</li>
+        <li>Overall PCT: 0.300</li>
+        <li>Conference Record: 3-6</li>
+        <li>Conference PCT: 0.333</li>
+        <li>Region: 3-3</li>
+        <li>Region PCT: 0.500</li>
       </ul>
-      <h3>Regulations</h3>
-      <p>[Written copy for the Page 3 here]</p>
-      <p>Images for the Page 3 - Regulations</p>
+
+      <p>Games this will be a table or list of games</p>
       <ul>
-        <img src="#" alt="image for page3" />
-        <img src="#" alt="image for page3" />
+        List the game information:
+        <li>Date</li>
+        <li>Time</li>
+        <li>Location</li>
+        <li>Opponent</li>
+        <li>Opponents mascot</li>
+        <li>Whether it was a win, loss, or not played yet</li>
+        <li>Final score</li>
+      </ul>
+      <p>Images for the Page 3 - Schedule</p>
+      <ul>
+        <img
+          src="./images/roster/triv-171_rsz.jpeg"
+          alt="image for page3"
+          height="350"
+        />
+        <img
+          src="./images/roster/team_shot.jpg"
+          alt="image for page3"
+          height="350"
+        />
       </ul>
       <hr />
       <h2>Wireframes</h2>
