--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -171,9 +171,13 @@
         alt="home page wireframe"
       />
 
-      <h3>[Page 2]</h3>
+      <h3>Rivers</h3>
 
-      <!-- <img src="#" alt="page 2 wireframe"> -->
+      <img
+      src="https://github.com/vwolfley/wdd-130-a1/tree/main/wwr/images/wireframe_page2.png"
+      alt="page 2 wireframe"
+    />
+
     </main>
   </body>
 </html>
