update picture for wireframe

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -174,7 +174,7 @@
       <h3>Rivers</h3>
 
       <img
-      src="https://github.com/vwolfley/wdd-130-a1/tree/main/wwr/images/wireframe_page2.png"
+      src="./images/wireframe-page2.png"
       alt="page 2 wireframe"
     />
 
