--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -56,6 +56,7 @@
                                 appreciate the late summer's slower, warmer water more.
                             </p>
                         </div>
+                        <div class="under-box"></div>
                     </div>
                 </section>
                 <section class="rivers">
@@ -76,25 +77,32 @@
                                 history that the canyon tells.
                             </p>
                         </div>
+                        <div class="under-box"></div>
                     </div>
                 </section>
                 <section class="rivers">
-                  <div class="wrapper1">
-                      <div class="picture"><img class="" src="images/rafting4_600.jpg" alt="river rafting" /></div>
-                      <div class="header"><h2>Grand Canyon, Arizona</h2></div>
-                      <div class="content">
-                          <p>
-                            This is the grand daddy of all canyons and the grand daddy of all river trips. You will never forget your visit to the Grand Canyon.
-                          </p>
-                          <p>
-                            Grand Canyon river rafting combines world-class whitewater with breathtaking scenery to make one truly unforgettable river experience. The canyon is filled not only with exhilarating whitewater rapids, but with side canyons and ancient indian ruins accessible only by river.
-                          </p>
-                          <p>
-                            CLASS I - X: The Grand Canyon uses a unique river rating scale. The rapids in the Canyon are technically rated I - X ( 1 - 10) to accommodate such a wide variety of rapids and river variances. However, most people are familiar with the regular I - V river rating scale, so we often refer to both.
-                          </p>
-                      </div>
-                  </div>
-              </section>
+                    <div class="wrapper1">
+                        <div class="picture"><img class="" src="images/rafting4_600.jpg" alt="river rafting" /></div>
+                        <div class="header"><h2>Grand Canyon, Arizona</h2></div>
+                        <div class="content">
+                            <p>
+                                This is the grand daddy of all canyons and the grand daddy of all river trips. You will never forget your visit to the
+                                Grand Canyon.
+                            </p>
+                            <p>
+                                Grand Canyon river rafting combines world-class whitewater with breathtaking scenery to make one truly unforgettable
+                                river experience. The canyon is filled not only with exhilarating whitewater rapids, but with side canyons and ancient
+                                indian ruins accessible only by river.
+                            </p>
+                            <p>
+                                CLASS I - X: The Grand Canyon uses a unique river rating scale. The rapids in the Canyon are technically rated I - X (
+                                1 - 10) to accommodate such a wide variety of rapids and river variances. However, most people are familiar with the
+                                regular I - V river rating scale, so we often refer to both.
+                            </p>
+                        </div>
+                        <div class="under-box"></div>
+                    </div>
+                </section>
             </main>
             <footer>
                 <p>Dry Oar &copy; 2023 - Vern Wolfley</p>
