--- a/knights-football/site-plan.html
+++ b/knights-football/site-plan.html
@@ -246,17 +246,14 @@
             <h2>Wireframes</h2>
             <p>Create three wireframes for your site. One for each page and list them here</p>
 
+            <h3>Home</h3>
+            <img src="https://wireframe.cc/xf2N7j" alt="home page wireframe" />
+
             <h3>Roster</h3>
-            <p>[Any additional details about home that the wireframe does not make clear]</p>
-            <img src="#" alt="home page wireframe" />
+            <img src="https://wireframe.cc/TWUvu4" alt="roster wireframe" />
 
             <h3>Schedule</h3>
-            <p>[Any additional details about page 2 that the wireframe does not make clear]</p>
-            <img src="#" alt="page 2 wireframe" />
-
-            <h3>Regulations</h3>
-            <p>[Any additional details about page 3 that the wireframe does not make clear]</p>
-            <img src="#" alt="page 3 wireframe" />
+            <img src="https://wireframe.cc/eagw3a" alt="schedule wireframe" />
         </main>
     </body>
 </html>
