update screen shot links

--- a/knights-football/site-plan.html
+++ b/knights-football/site-plan.html
@@ -247,13 +247,16 @@
             <p>Create three wireframes for your site. One for each page and list them here</p>
 
             <h3>Home</h3>
-            <img src="https://wireframe.cc/xf2N7j" alt="home page wireframe" />
+            <img src="./images/screen_shots/Home_Screenshot.png" alt="home page wireframe" />
+            <a href="https://wireframe.cc/xf2N7j">Home wireframe link</a>
 
             <h3>Roster</h3>
-            <img src="https://wireframe.cc/TWUvu4" alt="roster wireframe" />
+            <img src="./images/screen_shots/Roster_Screenshot.png" alt="roster wireframe" />
+            <a href="https://wireframe.cc/TWUvu4">Home wireframe link</a>
 
             <h3>Schedule</h3>
-            <img src="https://wireframe.cc/eagw3a" alt="schedule wireframe" />
+            <img src="./images/screen_shots/Schedule_Screenshot.png" alt="schedule wireframe" />
+            <a href="https://wireframe.cc/eagw3a">Home wireframe link</a>
         </main>
     </body>
 </html>
