--- a/knights-football/site-plan.html
+++ b/knights-football/site-plan.html
@@ -247,15 +247,15 @@
             <p>Create three wireframes for your site. One for each page and list them here</p>
 
             <h3>Home</h3>
-            <img src="./images/screen_shots/Home_Screenshot.png" alt="home page wireframe" />
+            <img src="./images/screen_shots/home_screenshot_tiny.png" alt="home page wireframe" width="350"/>
             <a href="https://wireframe.cc/xf2N7j">Home wireframe link</a>
 
             <h3>Roster</h3>
-            <img src="./images/screen_shots/Roster_Screenshot.png" alt="roster wireframe" />
+            <img src="./images/screen_shots/roster_screenshot_tiny.png" alt="roster wireframe" width="350" />
             <a href="https://wireframe.cc/TWUvu4">Home wireframe link</a>
 
             <h3>Schedule</h3>
-            <img src="./images/screen_shots/Schedule_Screenshot.png" alt="schedule wireframe" />
+            <img src="./images/screen_shots/schedule_screenshot_tiny.png" alt="schedule wireframe" width="350"/>
             <a href="https://wireframe.cc/eagw3a">Home wireframe link</a>
         </main>
     </body>
