add form to wwr

--- a/knights-football/site-plan.html
+++ b/knights-football/site-plan.html
@@ -252,11 +252,11 @@
 
             <h3>Roster</h3>
             <img src="./images/screen_shots/roster_screenshot_tiny.png" alt="roster wireframe" width="350" />
-            <a href="https://wireframe.cc/TWUvu4">Home wireframe link</a>
+            <a href="https://wireframe.cc/TWUvu4">Roster wireframe link</a>
 
             <h3>Schedule</h3>
             <img src="./images/screen_shots/schedule_screenshot_tiny.png" alt="schedule wireframe" width="350"/>
-            <a href="https://wireframe.cc/eagw3a">Home wireframe link</a>
+            <a href="https://wireframe.cc/eagw3a">Schedule wireframe link</a>
         </main>
     </body>
 </html>
