--- a/knights-football/pages/schedule.html
+++ b/knights-football/pages/schedule.html
@@ -3,32 +3,32 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Trivium Knights Football</title>
+        <title>Trivium Knights Football | Schedule</title>
         <meta name="description" content="Trivium Knights Football information page." />
         <meta name="author" content="Vern Wolfley" />
         <meta name="theme-color" content="#701300" />
 
-        <link rel="stylesheet" href="styles/main-styles.css" />
+        <link rel="stylesheet" href="../styles/main-styles.css" />
     </head>
     <body>
         <header>
             <nav>
-                <a id="logo_link" href="index.html">
-                    <img class="logo" src="images/kneeling_knight_crop.png" alt="knight Logo" width="125px" />
+                <a id="logo_link" href="../index.html">
+                    <img class="logo" src="../images/kneeling_knight_crop.png" alt="knight Logo" width="125px" />
                 </a>
                 <div class="heading">
                     <h4>Trivium Prep Football</h4>
                 </div>
                 <ul class="nav-links">
-                    <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="./pages/roster.html">Roster</a></li>
-                    <li><a href="./pages/schedule.html">Schedule</a></li>
+                    <li><a  href="../index.html">Home</a></li>
+                    <li><a  href="./roster.html">Roster</a></li>
+                    <li><a class="active" href="./schedule.html">Schedule</a></li>
                 </ul>
             </nav>
         </header>
 
         <main>
-            <h1>This is Home Page!</h1>
+            <h1>This is Schedule Page!</h1>
         </main>
 
         <footer>
@@ -36,13 +36,13 @@
 
             <div class="social">
                 <a href="https://www.linkedin.com/in/vern-wolfley-b8322813/" target="_blank">
-                    <img src="images/social/linkedin-logo.png" alt="instagram icon" />
+                    <img src="../images/social/linkedin-logo.png" alt="instagram icon" />
                 </a>
                 <a href="https://twitter.com/WolfleyVern" target="_blank">
-                    <img src="images/social/twitter-x-logo.png" alt="twitter icon" />
+                    <img src="../images/social/twitter-x-logo.png" alt="twitter icon" />
                 </a>
                 <a href="https://www.facebook.com/vwolfley" target="_blank">
-                    <img src="images/social/facebook-logo.png" alt="fb icon" />
+                    <img src="../images/social/facebook-logo.png" alt="fb icon" />
                 </a>
             </div>
         </footer>
