more work on personal home page

--- a/knights-football/index.html
+++ b/knights-football/index.html
@@ -13,10 +13,10 @@
     <body>
         <header>
             <nav>
-                <a id="logo_link" href="index.html">
-                    <img class="logo" src="images/kneeling_knight_crop.png" alt="knight Logo" width="125px" />
+                <a class="logo_link" href="index.html">
+                    <img class="logo" src="images/kneeling_knight_crop.png" alt="knight Logo" />
                 </a>
-                <div class="heading">
+                <div class="title">
                     <h4>Trivium Prep Football</h4>
                 </div>
                 <ul class="nav-links">
@@ -28,11 +28,88 @@
         </header>
 
         <main>
-            <h1>This is Home Page!</h1>
+            <section class="hero">
+                <div class="hero-box">
+                    <img class="hero-img" src="./images/knights_field_game_rsz.jpg" alt="knights game field" />
+                </div>
+                <div class="hero-msg">
+                    <h1>Welcome to Knights Football</h1>
+                    <h2>Passion - Dedication - Spirit</h2>
+                </div>
+            </section>
+            <section class="welcome">
+                <div class="content-box">
+                    <h2>Welcome</h2>
+                    <p>
+                        Welcome to the exhilarating play of Trivium Prep Football! We invite students, parents, and devoted fans to join us in
+                        celebrating the passion, dedication, and unwavering spirit of our remarkable team. Trivium's football program is not just
+                        about touchdowns and victories; it's a vibrant community that fosters character development, teamwork, and a love for the
+                        game. Whether you're a student athlete striving for greatness, a supportive parent cheering from the sidelines, or an
+                        enthusiastic fan seeking thrilling Friday night lights, we are excited to have you as a part of our football family. Together,
+                        we'll embark on a journey of grit and glory, creating memories that will last a lifetime. Get ready to experience the
+                        electrifying energy of Trivium Prep Football!
+                    </p>
+                </div>
+            </section>
+            <section class="philosophy">
+                <div class="box1">
+                    <h2>Great Hearts Athletic Philosophy</h2>
+                    <p>
+                        Our students benefit from the development of habits and virtue as part of the athletic experience. We strive for excellence on
+                        and off the field, providing an experience that shapes our athletes to be better people. The best measure of success of a
+                        Great Hearts athletic program is found in the character of the athlete it produces. All of our students can find opportunities
+                        to be successful while also being challenged at the highest levels of athletic competition.
+                    </p>
+                    <p>
+                        Great Hearts athletes train and practice with vigor similar to their approach in their academic pursuits. Our athletic
+                        programs foster a sense of cooperation that builds community and creates the life-long friendships. Our programs also foster
+                        team spirit and encourage the celebration of accomplishments and personal growth. Through community and building
+                        relationships, athletes are held to the highest standard of integrity and sportsmanship.
+                    </p>
+                </div>
+                <div class="box2">
+                    <blockquote>
+                        <p>
+                            Football is like life. It requires perseverance, self-denial, hard work, sacrifice, dedication, and respect for authority.
+                        </p>
+                        <cite>Vince Lombardi</cite>
+                    </blockquote>
+                </div>
+            </section>
+            <section class="sportsmanship">
+                <div class="content-box">
+                    <h2>Good Sportsmanship Reminder</h2>
+                    <img class="sportsmanship-img" src="./images/roster/triv-171_rsz.jpeg" alt="sportsmanship" />
+                    <p>
+                        As member school of the Arizona Interscholastic Association, we would like to remind you the objectives of educational based
+                        athletics are what set this event apart from all other levels of competition. We strive to promote good sportsmanship by
+                        student-athletes, coaches and spectators. We have a strong commitment to excellence, fair play, and above all, good
+                        sportsmanship. We request your cooperation by supporting the participants and officials in a positive manner.
+                    </p>
+                </div>
+            </section>
+            <div class="photo-area">
+                <div class="content-box">
+                    <img class="" src="./images/photos/TRIV-001.jpg" alt="">
+                    <img class="" src="./images/photos/TRIV-083.jpg" alt="">
+                    <img class="" src="./images/photos/TRIV-108.jpg" alt="">
+                </div>
+            </div>
         </main>
 
         <footer>
-            <p>wdd-130-a1 &copy; 2023 - Vern Wolfley</p>
+            <a class="logo_link" href="index.html">
+                <img class="logo" src="images/kneeling_knight_crop.png" alt="knight Logo" />
+            </a>
+            <div>Copyright &copy; 2023 - Vern Wolfley</div>
+
+            <nav>
+                <ul class="nav-links">
+                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="./pages/roster.html">Roster</a></li>
+                    <li><a href="./pages/schedule.html">Schedule</a></li>
+                </ul>
+            </nav>
 
             <div class="social">
                 <a href="https://www.linkedin.com/in/vern-wolfley-b8322813/" target="_blank">
